--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Yew App</title>
-  </head>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Domin</title>
+  <base data-trunk-public-url />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" />
+  <link data-trunk rel="sass" href="index.scss" />
+</head>
+
+<body></body>
+
 </html>
